--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ idna==3.10
 jiter==0.6.1
 openai==1.52.2
 pillow==11.0.0
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
